==> Duc-BK/AUV_STM32_Code/AUV_Board_STM32F4_1_v3_without_pistol/FatFs/diskio.c <==
#include "ff.h"
#include "diskio.h"
#include "stm32f4xx.h"
#include "my_delay.h"
#include "stm32f4xx_spi.h"
#include "stm32f4xx_rcc.h"
#include "misc.h"
#define 	UFATFS_TIM  				      		TIM7
#define 	UFATFS_TIM_CLK					 	 		RCC_APB1Periph_TIM7
#define 	UFATFS_TIM_CLK_Cmd    				RCC_APB1PeriphClockCmd
#define   UFATFS_TIM_IRQn								TIM7_IRQn
#define 	UFATFS_TIM_IRQHandler					TIM7_IRQHandler
#define 	UFATFS_CD_PIN  				   	GPIO_Pin_4
#define 	UFATFS_CD_PORT 				  	GPIOC
#define 	UFATFS_CD_CLK							RCC_AHB1Periph_GPIOC
#define 	UFATFS_CD_SOURCE				 	GPIO_PinSource4
#define		UFATFS_CD_CLK_Cmd		  	 	RCC_AHB1PeriphClockCmd
#define 	UFATFS_NSS_PIN  				   	GPIO_Pin_4
#define 	UFATFS_NSS_PORT 				  	GPIOA
#define 	UFATFS_NSS_CLK							RCC_AHB1Periph_GPIOA
#define 	UFATFS_NSS_SOURCE				 		GPIO_PinSource4
#define		UFATFS_NSS_CLK_Cmd		  	 	RCC_AHB1PeriphClockCmd
#define 	UFATFS_SCK_PIN  				   	GPIO_Pin_5
#define 	UFATFS_SCK_PORT 				  	GPIOA
#define 	UFATFS_SCK_CLK							RCC_AHB1Periph_GPIOA
#define 	UFATFS_SCK_SOURCE				 		GPIO_PinSource5
#define		UFATFS_SCK_CLK_Cmd		  	 	RCC_AHB1PeriphClockCmd
#define 	UFATFS_MISO_PIN  				   	GPIO_Pin_6
#define 	UFATFS_MISO_PORT 				  	GPIOA
#define 	UFATFS_MISO_CLK							RCC_AHB1Periph_GPIOA
#define 	UFATFS_MISO_SOURCE				 	GPIO_PinSource6
#define		UFATFS_MISO_CLK_Cmd		  	 	RCC_AHB1PeriphClockCmd
#define 	UFATFS_MOSI_PIN  				   	GPIO_Pin_7
#define 	UFATFS_MOSI_PORT 				  	GPIOA
#define 	UFATFS_MOSI_CLK							RCC_AHB1Periph_GPIOA

static
BYTE xchg_spi (
	BYTE dat	/* Data to send */
)
{
	SPI_I2S_SendData(UFATFS_SPI, dat);
	while(SPI_I2S_GetFlagStatus(UFATFS_SPI, SPI_I2S_FLAG_TXE) == RESET);			//Wait for transmit. Transmit OK, turn on FLAG_TXE
	while(SPI_I2S_GetFlagStatus(UFATFS_SPI, SPI_I2S_FLAG_RXNE) == RESET);			//Wait for receive. Receive OK, turn on FLAG_RXNE
	return SPI_I2S_ReceiveData(UFATFS_SPI);		/* Return received byte */
}

static
void xmit_spi_multi (
	const BYTE *buff,	/* Pointer to the data */
	UINT btx			/* Number of bytes to send (even number) */
)
{
	WORD d;

	SPI_MODE16BITS();		/* Put SPI into 16-bit mode */

	d = buff[0] << 8 | buff[1]; buff += 2;
	SPI_I2S_SendData(UFATFS_SPI, d);	/* Send the first word */
	btx -= 2;
	do {
		d = buff[0] << 8 | buff[1]; buff += 2;	/* Word to send next */
		while(SPI_I2S_GetFlagStatus(UFATFS_SPI, SPI_I2S_FLAG_TXE) == RESET);	/* Wait for end of the SPI transaction */
		while(SPI_I2S_GetFlagStatus(UFATFS_SPI, SPI_I2S_FLAG_RXNE) == RESET);
		(void)SPI_I2S_ReceiveData(UFATFS_SPI);							/* Discard received word */
		SPI_I2S_SendData(UFATFS_SPI, d);						/* Start next transaction */
	} while (btx -= 2);
	while(SPI_I2S_GetFlagStatus(UFATFS_SPI, SPI_I2S_FLAG_TXE) == RESET);	/* Wait for end of the SPI transaction */
	while(SPI_I2S_GetFlagStatus(UFATFS_SPI, SPI_I2S_FLAG_RXNE) == RESET);
	(void)SPI_I2S_ReceiveData(UFATFS_SPI);							/* Discard received word */

	SPI_MODE8BITS();	/* Put SPI into 8-bit mode */
}

DSTATUS disk_initialize (
	BYTE drv		/* Physical drive number (0) */
)
{
	BYTE n, cmd, ty, ocr[4];


	if (drv) return STA_NOINIT;			/* Supports only drive 0 */
	init_spi();							/* Initialize SPI */

	if (Stat & STA_NODISK) return Stat;	/* Is card existing in the soket? */

	FCLK_SLOW();
	for (n = 10; n; n--) xchg_spi(0xFF);	/* Send 80 dummy clocks */

	ty = 0;
	if (send_cmd(CMD0, 0) == 1) {			/* Put the card SPI/Idle state */
		Timer1 = 1000;						/* Initialization timeout = 1 sec */
		if (send_cmd(CMD8, 0x1AA) == 1) {	/* SDv2? */
			for (n = 0; n < 4; n++) ocr[n] = xchg_spi(0xFF);	/* Get 32 bit return value of R7 resp */
			if (ocr[2] == 0x01 && ocr[3] == 0xAA) {				/* Is the card supports vcc of 2.7-3.6V? */
				while (Timer1 && send_cmd(ACMD41, 1UL << 30)) ;	/* Wait for end of initialization with ACMD41(HCS) */
				if (Timer1 && send_cmd(CMD58, 0) == 0) {		/* Check CCS bit in the OCR */
					for (n = 0; n < 4; n++) ocr[n] = xchg_spi(0xFF);
					ty = (ocr[0] & 0x40) ? CT_SD2 | CT_BLOCK : CT_SD2;	/* Card id SDv2 */
				}
			}
		} else {	/* Not SDv2 card */
			if (send_cmd(ACMD41, 0) <= 1) 	{	/* SDv1 or MMC? */
				ty = CT_SD1; cmd = ACMD41;	/* SDv1 (ACMD41(0)) */
			} else {
				ty = CT_MMC; cmd = CMD1;	/* MMCv3 (CMD1(0)) */
			}
			while (Timer1 && send_cmd(cmd, 0)) ;		/* Wait for end of initialization */
			if (!Timer1 || send_cmd(CMD16, 512) != 0)	/* Set block length: 512 */
				ty = 0;
		}
	}
	CardType = ty;	/* Card type */
	deselect();

	if (ty) {			/* OK */
		FCLK_FAST();			/* Set fast clock */
		Stat &= ~STA_NOINIT;	/* Clear STA_NOINIT flag */
	} else {			/* Failed */
		Stat = STA_NOINIT;
	}

	return Stat;
}
